# crusty_gc

./: .gitignore  Cargo.toml  README.md  application.c  build_run.sh  run_valgrind.sh
c_app/src/: a.txt  application.c  rustgc.h
src/: allocator.rs  lib.rs  main.rs  tests.rs
